Fix Safari Blurriness

--- a/src/style.css
+++ b/src/style.css
@@ -45,5 +45,5 @@ body {
     margin: 0;
     overflow: hidden;
     image-rendering: pixelated;
-    transform: unset !important;	/* Fix stupid a** safari nonsense */
+    image-rendering: -webkit-optimize-contrast; /* Fix Stupid A** Safari Nonsense */
 }
